--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,15 @@ h3{
   }
 }
 
-.row{
+nav.nav-center ul {
+  text-align: center;
+}
+nav.nav-center ul li {
+  display: inline;
+  float: none;
+}
+nav.nav-center ul li a {
+  display: inline-block;
 }
 
 .column {
