--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ nav.nav-center ul li {
 }
 nav.nav-center ul li a {
   display: inline-block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .column {
