--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,6 @@
 body{
-    background-image:url('../Images/11.jpg');
+    background-image:url('../Images/webbg.png');
+    background-color: #c6c4c4;
     background-repeat: no-repeat;
     background-position:center center;
     background-attachment:fixed;
@@ -9,6 +10,37 @@ body{
     background: linear-gradient(to right, #66a6ff, #89f7fe ); */
 
 }
-h1{
+h2,h1{
     color: white;
+    font-family: 'Playfair Display', serif; 
+}
+.welcome{
+    padding:100px;
+    height: 550px;
+    background: linear-gradient(90deg, #eceff1 50%, #cfd8dc 50%);
+}
+.more1{
+    color: #eceff1;
+    padding-top: 230px;
+}
+.more2{
+    float: right;
+    list-style: none;
+    padding-left: 0;
+    margin-left: 0;
+    background-color: black;
+}
+.more2 li{
+    margin:0;
+    padding:0;
+}
+.mantap{
+    height: 800px;
+    background: linear-gradient(90deg, #fdcd3b 50%, #ffed4b 50%);
+}
+.line1{
+    height: 550px;
+}
+.line2{
+    height: 550px;
 }
