--- a/src/css/kontak.css
+++ b/src/css/kontak.css
@@ -9,3 +9,9 @@ body{
 h3{
     color: crimson;
 }
+#1,#2,#3,#4,#5,#6,#7,#8,#9,#10,#11,#12{
+    padding-left: 300px;
+}
+.numbs{
+    color: blue;
+}
