--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,121 @@
+body{
+  /* background-image:url('./Images/webbg1.jpf'); */
+  background-color: #c6c4c4;
+  background-repeat: no-repeat;
+  background-position:center center;
+  background-attachment:fixed;
+  background-size:cover;
+  -o-animation: colorcycle 20s infinite;
+  -moz-animation: colorcycle20s infinite;
+  -webkit-animation: colorcycle 20s infinite;
+  animation: colorcycle 20s infinite; 
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  opacity: 1;
+  /* background: #89f7fe ;  /* fallback for old browsers 
+  background: -webkit-linear-gradient(to right, #66a6ff,#89f7fe );  /* Chrome 10-25, Safari 5.1-6
+  background: linear-gradient(to right, #66a6ff, #89f7fe ); */
+
+}
+h2,h1{
+  color: white;
+  font-family: 'Playfair Display', serif; 
+}
+.welcome{
+  padding:100px;
+  height: 550px;
+  background: linear-gradient(90deg, #eceff1 50%, #cfd8dc 50%);
+  position: relative;
+}
+.subWell{
+  position: absolute;
+  bottom: 2%;
+  right: 1%;
+}
+.more1{
+  color: #eceff1;
+}
+.more2{
+  bottom:0;
+  right: 0%;
+  background-color: black;
+}
+.more2 li{
+  margin:0;
+  padding:0;
+}
+.mantap{
+  height: 800px;
+  background: linear-gradient(90deg, #fdcd3b 50%, #ffed4b 50%);
+}
+.line1{
+  height: 550px;
+}
+.line2{
+  height: 550px;
+}
+
+#profile-card{
+  height: 527px;
+  background-color: #e0f7fa;
+}
+#profile-card .card-image {
+  height: 150px;
+}
+
+#profile-card .card-profile-image {
+  width: 70px;
+  position: absolute;
+  top: 110px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+#profile-card .btn-move-up {
+  position: relative;
+  top: -40px;
+  right: -18px;
+  margin-right: 10px !important;
+}
+
+#profile-card .card-content p {
+  font-size: 1.2rem;
+  margin: 10px 0 12px;
+}
+.sidea{
+  background-image: url("./Images/teredit.jpg");
+    background-color: #e1f5fe;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: 20%;
+    height: 540px;
+}
+.kanan{
+    height: 540px;
+    background-color: #ffff8d;
+}
+.numbs{
+  width: 100%;
+  bottom:0px;
+  position: absolute;
+  align-items: center;
+  right:0;
+}
+.pcx{
+  margin-top: 5%;
+}
+.nameu{
+  text-align: left;
+  font-family:bebas;
+  color: #212121;
+  font-size: 36px;
+  margin-left: 5%;
+}
+.tabspro ul li a{
+  color: white;
+}
 .App {
   text-align: center;
   width: 100% ;
@@ -27,9 +145,6 @@
   /*color: white;*/
 }
 
-h3{
-  color: #ff5910;
-}
 .App-link {
   color: #61dafb;
 }
@@ -76,4 +191,73 @@ nav.nav-center ul li a {
   .column {
     width: 100%;
   }
+}
+@font-face{
+  font-family:runtothehills;
+  src:url("./fonts/runtothehills.ttf");
+}
+@font-face{
+  font-family:bebas;
+  src:url("./fonts/BEBAS.ttf");
+}
+html, body, #hero, #overlay {
+  height: 100%;
+  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#hero { background: url(https://s3.amazonaws.com/uploads.hipchat.com/21309/369069/P3rXUVfLuQGvv7N/bw.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+    }
+
+
+#overlay { 
+  -o-animation: colorcycle 20s infinite;
+  -moz-animation: colorcycle20s infinite;
+  -webkit-animation: colorcycle 20s infinite;
+  animation: colorcycle 20s infinite; 
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  -moz-opacity: 0.5;
+  -khtml-opacity: 0.5;
+  opacity: 0.5;
+}
+
+
+@-o-keyframes colorcycle {
+  0%   {background: #ffebee;}
+  25%  {background: #f3e5f5;}
+  50%  {background: #e8eaf6;}
+  75%  {background: #e1f5fe;}
+  100% {background: #ffebee;}
+}
+
+@-moz-keyframes colorcycle {
+  0%   {background: #ffebee;}
+  25%  {background: #f3e5f5;}
+  50%  {background: #e8eaf6;}
+  75%  {background: #e1f5fe;}
+  100% {background: #ffebee;}
+}
+
+@-webkit-keyframes colorcycle {
+  0%   {background: #ffebee;}
+  25%  {background: #f3e5f5;}
+  50%  {background: #e8eaf6;}
+  75%  {background: #e1f5fe;}
+  100% {background: #ffebee;}
+}
+
+@keyframes colorcycle {
+  0%   {background: #ffebee;}
+  25%  {background: #f3e5f5;}
+  50%  {background: #e8eaf6;}
+  75%  {background: #e1f5fe;}
+  100% {background: #ffebee;}
 }
