--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body{
 
 }
 h2,h1{
-  color: white;
+  color:#212121;
   font-family: 'Playfair Display', serif; 
 }
 .welcome{
@@ -125,6 +125,10 @@ h2,h1{
 .tabspro ul li a{
   color: white;
 }
+.txtNav{
+  color:#212121;
+  font-size: 24px;
+}
 .App {
   text-align: center;
   width: 100% ;
@@ -208,6 +212,18 @@ nav.nav-center ul li a {
 @font-face{
   font-family:bebas;
   src:url("./fonts/BEBAS.ttf");
+}
+@font-face{
+  font-family:concetta;
+  src:url("./fonts/Concetta.ttf");
+}
+@font-face{
+  font-family:lemonMilk;
+  src:url("./fonts/LemonMilk.otf");
+}
+@font-face{
+  font-family:moonllime;
+  src:url("./fonts/Moonllime.ttf");
 }
 html, body, #hero, #overlay {
   height: 100%;
