--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h2,h1{
 }
 .welcome{
   padding:100px;
-  height: 550px;
+  height: 530px;
   background: linear-gradient(90deg, #eceff1 50%, #cfd8dc 50%);
   position: relative;
 }
@@ -35,7 +35,7 @@ h2,h1{
   right: 1%;
 }
 .more1{
-  color: #eceff1;
+  color: #212121;
 }
 .more2{
   bottom:0;
@@ -51,10 +51,10 @@ h2,h1{
   background: linear-gradient(90deg, #fdcd3b 50%, #ffed4b 50%);
 }
 .line1{
-  height: 550px;
+  height: 530px;
 }
 .line2{
-  height: 550px;
+  height: 530px;
 }
 
 #profile-card{
@@ -85,25 +85,46 @@ h2,h1{
   margin: 10px 0 12px;
 }
 .sidea{
-  background-image: url("./Images/teredit.jpg");
+    background-image: url("./Images/propil.webp");
     background-color: #e1f5fe;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: 20%;
-    height: 540px;
+    height: 530px;
 }
 .kanan{
-    height: 540px;
-    /* background-color: #ffff8d; */
-    -o-animation: colorcycle 20s infinite;
-    -moz-animation: colorcycle20s infinite;
+    height: 530px;
+    /* -o-animation: colorcycle 20s infinite;
+    -moz-animation: colorcycle 20s infinite;
     -webkit-animation: colorcycle 20s infinite;
     animation: colorcycle 20s infinite; 
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
     -moz-opacity: 0.5;
     -khtml-opacity: 0.5;
-    opacity: 1;
+    opacity: 1; */
+    background-color: white;
+}
+.kiri{
+  height: 530px;
+  padding-left: 3%!important;
+  padding-right: 2%!important;
+  background-color: #e1f5fe;
+}
+.sideb{
+  background-color: #b3e5fc;
+  height: 530px;
+}
+.atas{
+  height: 265px;
+}
+.bawah{
+ 
+  font-family: bebas;
+}
+#test1 p{
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .numbs{
   width: 100%;
@@ -111,9 +132,13 @@ h2,h1{
   position: absolute;
   align-items: center;
   right:0;
+  color:#212121;
 }
 .pcx{
   margin-top: 5%;
+}
+.material-icons{
+  color:#212121!important;
 }
 .nameu{
   text-align: left;
@@ -128,6 +153,67 @@ h2,h1{
 .txtNav{
   color:#212121;
   font-size: 24px;
+}
+.poter{
+  font-family: strude;
+  margin-right: 1%;
+}
+.slides{
+  background-color: transparent!important;
+}
+.caption h3,h5{
+  color: #212121;
+  font-family: 'Playfair Display', serif;
+}
+.indicator-item.active{
+  background-color: #212121!important;
+}
+.slider {
+  height: 510px!important;
+}
+.tabs .indicator{
+  background-color: #212121!important;
+}
+.collapsible-header{
+  background-color: #eceff1!important;
+  border-bottom: 1px solid #fff;
+  color:#212121;
+  font-family: lemonMilk;
+}
+.collapsible{
+  margin:4% 1% 1rem 1%!important;
+  border: none!important;
+}
+.collapsible-body{
+  background-color: #cfd8dc;
+  border-bottom:1px solid #fff; 
+}
+.interis{
+  margin-top: 3%;
+  margin-left: 1%!important;
+  margin-right: 1%!important;
+}
+.misal1{
+  height: 220px;
+  background-color: #eceff1;
+}
+.misal1 img,.misal2 img{
+  margin-top: 4%;
+}
+.misal2{
+  height: 220px;
+  background-color: #cfd8dc;
+}
+.cardio{
+  margin-top: 1%;
+}
+.social-container{
+  width: 80%!important;
+  height: 80%!important;
+}
+.social{
+  margin-top:100%;
+  height: 500px!important;
 }
 .App {
   text-align: center;
@@ -206,10 +292,6 @@ nav.nav-center ul li a {
   }
 }
 @font-face{
-  font-family:runtothehills;
-  src:url("./fonts/runtothehills.ttf");
-}
-@font-face{
   font-family:bebas;
   src:url("./fonts/BEBAS.ttf");
 }
@@ -224,6 +306,18 @@ nav.nav-center ul li a {
 @font-face{
   font-family:moonllime;
   src:url("./fonts/Moonllime.ttf");
+}
+@font-face{
+  font-family:timeless;
+  src:url("./fonts/Timeless.ttf");
+}
+@font-face{
+  font-family:strude;
+  src:url("./fonts/strude.ttf");
+}
+
+.tab a{
+  font-family: lemonMilk;
 }
 html, body, #hero, #overlay {
   height: 100%;
